[gd_scene load_steps=3 format=3 uid="uid://cwcfvig1wond3"]

[ext_resource type="Script" path="res://objects/summoning_circle/summoning_circle.gd" id="1_3dlk4"]
[ext_resource type="PackedScene" uid="uid://dhsnpc1yjqirn" path="res://objects/summoning_circle/candle/candle.tscn" id="2_2wybv"]

[node name="SummoningCircle" type="Node2D"]
script = ExtResource("1_3dlk4")

[node name="Candle2" parent="." instance=ExtResource("2_2wybv")]
position = Vector2(706, 254)

[node name="Candle1" parent="." instance=ExtResource("2_2wybv")]
position = Vector2(457, 124)

[node name="Candle3" parent="." instance=ExtResource("2_2wybv")]
position = Vector2(683, 511)

[node name="Candle4" parent="." instance=ExtResource("2_2wybv")]
position = Vector2(214, 495)

[node name="Candle5" parent="." instance=ExtResource("2_2wybv")]
position = Vector2(204, 253)
